--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,34 +1,48 @@
 name: CI Pipeline
 
 on:
-  push:
-    branches:
-      - main
   pull_request:
+  push:
+    branches: [ "main" ]
 
 jobs:
-  build-test:
-    runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-22.04
+    name: Build
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Set up JDK 21
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
           java-version: '21'
+          distribution: 'temurin'
+          cache: gradle
 
-      - name: Cache Gradle dependencies
-        uses: actions/cache@v3
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
+      - name: Build project
+        run: ./gradlew bootJar
+
+  test:
+    runs-on: ubuntu-22.04
+    name: Test
+    needs: build
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
         with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle
+          java-version: '21'
+          distribution: 'temurin'
+          cache: gradle
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
 
       - name: Run tests
-        run: ./gradlew clean build --no-daemon
+        run: ./gradlew test
